--- a/tor/src/main/resources/application.conf
+++ b/tor/src/main/resources/application.conf
@@ -1,3 +1,4 @@
 webdriver.gecko.driver=${?WEBDRIVER_GECKO_DRIVER}
 extension.dir=${?EXTENSION_DIR}
 extension.onion.name=${?EXTENSION_ONION_NAME}
+extension.no.script=${?EXTENSION_NO_SCRIPT}
